Add IT Support Technician and Junior Developer experience sections to the resume

--- a/index.html
+++ b/index.html
@@ -308,6 +308,32 @@
                         <li>Managed printer setup and maintenance</li>
                     </ul>
                 </div>
+                <div class="bg-white p-6 rounded-lg shadow-sm mb-6 fade-in delay-100">
+                    <h3 class="text-xl font-bold text-blue-600 mb-1">IT Support Technician</h3>
+                    <div class="flex justify-between items-center mb-3">
+                        <span class="text-gray-700 font-medium">Chuka University</span>
+                        <span class="text-gray-500">2021 – 2024</span>
+                    </div>
+                    <ul class="list-disc pl-5 text-gray-600 space-y-2">
+                        <li>Provided technical support to students and staff</li>
+                        <li>Maintained computer labs and IT infrastructure</li>
+                        <li>Troubleshot hardware and software issues</li>
+                        <li>Managed user accounts and access permissions</li>
+                    </ul>
+                </div>
+                <div class="bg-white p-6 rounded-lg shadow-sm mb-6 fade-in delay-200">
+                    <h3 class="text-xl font-bold text-blue-600 mb-1">Junior Developer (Freelance)</h3>
+                    <div class="flex justify-between items-center mb-3">
+                        <span class="text-gray-700 font-medium">Self-Employed</span>
+                        <span class="text-gray-500">2022 – Present</span>
+                    </div>
+                    <ul class="list-disc pl-5 text-gray-600 space-y-2">
+                        <li>Developed web applications using Django and React</li>
+                        <li>Built REST APIs with Python and Java</li>
+                        <li>Collaborated with clients on custom software solutions</li>
+                        <li>Implemented database designs and optimizations</li>
+                    </ul>
+                </div>
             </div>
         </div>
     </section>
